# Gatherraa

./: .gitignore  ci-cd.yaml  docker-compose.monitoring.yml
.github/workflows/: integration-tests.yml
app/backend/: .gitignore
app/backend/kong/: README.md  docker-compose.kong.yml  kong.yml
app/backend/src/: app.module.ts
contract/: .gitignore  Cargo.toml  README_ADVANCED_CONTRACTS.md  clippy.toml
contract/common/src/: access.rs  lib.rs  reentrancy.rs  storage.rs  types.rs  upgrade.rs  validation.rs
contract/contracts/: Cargo.toml
contract/contracts/src/: contract.rs  lib.rs  types.rs
contract/cross_contract_contract/: Cargo.toml
contract/cross_contract_contract/src/: lib.rs  storage_types.rs
contract/dutch_auction_contract/: Cargo.toml
contract/dutch_auction_contract/src/: lib.rs  storage_types.rs  test.rs
contract/escrow_contract/: Cargo.toml
contract/feature_flag_contract/: Cargo.toml
contract/governance_contract/: Cargo.toml
contract/identity_contract/: Cargo.toml
contract/multisig_wallet_contract/: Cargo.toml
contract/subscription_contract/: Cargo.toml
contract/ticket_contract/: Cargo.toml
contract/vrf_contract/: Cargo.toml
contract/zk_ticket_contract/: Cargo.toml
docs/: CACHE_IMPLEMENTATION.md
docs/openapi/: gateway-swagger.yaml
monitoring/: alert_rules.yml  alertmanager.yml  loki-config.yml  prometheus.yml  promtail-config.yml
tests/: .gitignore
tests/integration/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  hardhat.config.ts  package.json  tsconfig.json
tests/k6-load-tests/: README.md
(+56 files in other folders)
